Fix call to action vertical alignment

--- a/src/assets/styles/components/_buttons.scss
+++ b/src/assets/styles/components/_buttons.scss
@@ -4,13 +4,12 @@
 	border: solid 1px transparent;
 	border-radius: rem(3);
 	color: var(--white);
-	display: flex;
-	flex-direction: column;
+	display: block;
 	font-family: var(--font-family-sans);
 	font-weight: $font-weight-semibold;
 	height: rem(38);
-	justify-content: center;
 	max-width: rem(266);
+	padding: rem(7) rem(6) rem(3.5);
 	text-align: center;
 	text-decoration: none;
 	width: 100%;
